faq overlap resolved

--- a/css/faq.css
+++ b/css/faq.css
@@ -47,7 +47,7 @@ ul li i:after {
     font-size: 20px;
     line-height: 34px;
     text-align: left;
-    padding: 15px 15px 0;
+    padding: 15px 35px 0px 15px;
     text-transform: none;
     font-weight: 300;
     letter-spacing: 1px;
